# MY_SWAMP

./: .gitignore  CLAUDE.md  COMPILED_README_SWAMPE_PARITY.md  CONTRIBUTING.md  NEEDED_CHANGES.md  README.md  needed_updates.md  pyproject.toml  pytest.ini  readme213.md  setup.py  spec.md  updates.md
.github/workflows/: draft-pdf.yml  main.yml
notebooks/: hmc.ipynb  nss.py  plot_hmc.py  plot_mala.py  plot_nss.py  run.sh  run_hmc.py  run_mala.py  swamp_plot.py  swamp_plot_logspace_colab.ipynb  swamp_run.py  swamp_run_logspace_colab.ipynb  swampe.ipynb
paper/: Makefile  README.md  SUBMISSION_NOTES.md  paper.bib  paper.md  paper.tex  speed_benchmark.md
retrieval/: README.md
src/: README.md  continuation.py  explicit_tdiff.py  main_function.py  plotting.py  time_stepping.py
testing/: benchmark_gradient.py  benchmark_scan.py  compare_long_run_parity.py  differentiability_demo.py  generate_reference_parity_fixtures.py  make_sensitivity_figure.py
testing 2/: benchmark.py  export.py  predictions.py  smoke_test_export.py  vulcan_rollout.py
tests/: compare_long_run_parity.py  conftest.py  test_backend_preflight.py  test_import_and_version.py  test_model_scan_smoke.py  test_parity_quirks.py  test_parity_reference_regression.py  test_static_spectral_params.py  test_transform_stack.py  test_unit.py  testing.py  testing_grads.py
unit_tests/: test_autodiff.py  test_backend_preflight.py  test_continuation_roundtrip.py  test_invalid_input.py  test_parity_quirks.py  test_parity_reference_regression.py  test_static_spectral_params.py  test_vmap_smoke.py
(+30 files in other folders)
